# workflow-graph

./: .gitignore  README.md  TEST_SUITE_COMPLETION_REPORT.md  TYPE_HINTS_COMPLETION_REPORT.md  Untitled-1.ipynb  Untitled-2.ipynb  Untitled-3.ipynb  check_schema.py  create-agent.ipynb  create_jira_tables.sql  create_test_schema.py  debug_validation.py  debug_validation2.py  diagnostic_test.py  fix_all_tests.py  fix_resume_test_types.py  fix_skills_carefully.py  fix_skills_experience.py  fix_type_hints.py  generate_ddl.py  openproject.ipynb  prototype.ipynb  pyproject.toml  setup_test_tables.py  tasks.py  test_imports.py
.devcontainer/: devcontainer.json
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  (+256 more)
api/cost_tracking/: __init__.py
api/hr/: __init__.py
api/jira/: lifespan.py  main.py  webhook_manager.py
api/prompts/: __init__.py
api/shared/: __init__.py
app/jira/: lifespan.py  main.py  models.py  webhook_broadcaster.py
database/: README.md  check_migration_status.py  create_migration_table.py  execute_migration.py  get_executed_migrations.py  get_pending_migrations.py  migrate.py  requirements.txt  run_migrations.py  test_migrations.py
database/migrations/: 001_initial_schema.sql  002_add_audit_tables.sql  003_add_indexes.sql  004_jira_tables.sql
prompts/: development-patterns.md
tasks/: prd-agentic-workforce-api.md  prd-test-directory-refactoring.md  tasks-prd-agentic-workforce-api.md
tests/: conftest.py  test-refactoring-guide-revised.md  test-refactoring-guide.md  test_analyze_test_functions_test.py  test_api_to_test_mapping_test.py  test_boards.py  test_columns.py  test_create_test_schema_test.py  test_generate_comprehensive_test_structure_test.py  test_generate_test_files_test.py  test_main.py  test_refactoring_plan.md  test_tasks_test.py  test_tickets.py  test_webhooks.py
tests/test_api/: conftest.py  test_tests_test_api_init_test.py
tests/test_cost_tracking/: conftest.py  test_execution_cost.py  test_model_catalog.py
tests/test_database/: check_migration_status_test.py  create_migration_table_test.py  execute_migration_test.py  get_pending_migrations_test.py  (+4 more)
(+2417 files in other folders)
