[project]
name = "workflow-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Schalton",email = "Evan.Schalton@Gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-ai (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
